--- a/examples/hello_ros.yaml
+++ b/examples/hello_ros.yaml
@@ -8,5 +8,4 @@ routes:
 
 topics:
   hello_ros2: { type: "std_msgs/String", route: ros1_to_ros2 }
-  hello_ros1: { type: "std_msgs/String", route: ros2_to_ros1 }
-
+  hello_ros1: { type: "std_msgs/String", route: ros2_to_ros1, ros1 : { queue_size: 10, latch: false } }
