soss-ros1 xtypes support

--- a/packages/ros1-test/CMakeLists.txt
+++ b/packages/ros1-test/CMakeLists.txt
@@ -7,10 +7,17 @@ find_package(soss-core REQUIRED)
 find_package(soss-mock REQUIRED)
 find_package(soss-genmsg REQUIRED)
 find_package(soss-ros1 REQUIRED)
+find_package(xtypes REQUIRED)
 
 # Get message dependencies
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+
+if(NOT CMAKE_CXX_STANDARD)
+  # TODO(MXG): Remove this block and use target_compile_features(~)
+  # instead when we no longer need to support Ubuntu 16.04.
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
 soss_genmsg_mix(
   PACKAGES geometry_msgs nav_msgs
