--- a/packages/ros1-test/resources/ros1__geometry_msgs.yaml
+++ b/packages/ros1-test/resources/ros1__geometry_msgs.yaml
@@ -1,6 +1,9 @@
 systems:
-  ros1: { type: ros1, node_name: geometry_forwarder }
-  mock: { type: mock }
+  ros1:
+    type: ros1
+  mock:
+    type: mock
+    types-from: ros1
 
 routes:
   mock_to_ros1: { from: mock, to: ros1 }
@@ -13,5 +16,5 @@ topics:
   echo_pose: { type: "geometry_msgs/Pose", route: mock_to_ros1 }
 
 services:
-  get_plan: { type: "nav_msgs/GetPlan", route: ros1_srv }
-  echo_plan: { type: "nav_msgs/GetPlan", route: mock_srv }
+  get_plan: { type: "nav_msgs/GetPlan:request", route: ros1_srv }
+  echo_plan: { type: "nav_msgs/GetPlan:response", route: mock_srv }
