Refactor code for subscription and request callback pools (#15)
* Refactor code for subscription and request callback pools

Signed-off-by: Jose Antonio Moral <joseantoniomoralparras@gmail.com>

* Add verbose output to colcon build

Signed-off-by: Jose Antonio Moral <joseantoniomoralparras@gmail.com>

* Restore is-core branch

Co-authored-by: Jose Antonio Moral <joseantoniomoralparras@gmail.com>

Co-authored-by: laura <52071480+laura-eprosima@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,10 @@ jobs:
       - name: Build
         run: |
           . /opt/ros/noetic/setup.sh
-          colcon build --packages-up-to is-ros1-test
+          colcon build --packages-up-to is-ros1-test --event-handlers console_direct+
 
       - name: Test
         run: |
           . /opt/ros/noetic/setup.sh && . install/local_setup.sh
           roscore & colcon test --packages-up-to is-ros1-test --event-handlers console_direct+
           colcon test-result
-
