Change CI branch of the Integration Service repository
Signed-off-by: Jose Antonio Moral <joseantoniomoralparras@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt install -y cmake gcc g++ git libboost-dev libboost-program-options-dev libyaml-cpp-dev python3-pip
           pip3 install colcon-common-extensions
 
-      - name: Download the Integration Service Core and mock SystemHandle
+      - name: Download the Integration Service
         run: |
-          git clone -b feature/soss-core-to-is-core --recursive https://github.com/eProsima/soss src/is-core
+          git clone --recursive https://github.com/eProsima/Integration-Service src/integration-service
 
       - name: Build
         run: |
