--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build
         run: |
           . /opt/ros/noetic/setup.sh
-          colcon build --cmake-args -DBUILD_ROS1_TESTS=ON --event-handlers console_direct+
+          colcon build --cmake-args -DCMAKE_BUILD_TYPE=DEBUG -DBUILD_ROS1_TESTS=ON --event-handlers console_direct+
 
       - name: Test
         run: |
