--- a/utils/ros1-mix-generator/CMakeLists.txt
+++ b/utils/ros1-mix-generator/CMakeLists.txt
@@ -22,6 +22,15 @@ cmake_minimum_required(VERSION 3.5.0)
 
 project(is-ros1-mix-generator)
 
+###################################################################################
+# Configure options
+###################################################################################
+option(BUILD_LIBRARY "Compile the ROS 1 SystemHandle" ON)
+
+if(NOT BUILD_LIBRARY)
+    return()
+endif()
+
 # Get dependencies
 find_package(is-ros1-genmsg REQUIRED)
 find_package(is-ros1 REQUIRED)
